# zenith

./: Cargo.toml  PDR-ZENITH-FRONTEND.md  README.md  Zenith-whitepaper.md  package.json
zenith-contracts/zenith/contracts/invoice-nft/: Cargo.toml
zenith-contracts/zenith/contracts/invoice-nft/src/: lib.rs  test.rs
zenith-contracts/zenith/contracts/liquidity-pool/: Cargo.toml
zenith-contracts/zenith/contracts/liquidity-pool/src/: lib.rs  test.rs
zenith-contracts/zenith/contracts/marketplace/: Cargo.toml  Makefile
zenith-contracts/zenith/contracts/marketplace/src/: lib.rs  test.rs
zenith-contracts/zenith/contracts/marketplace/test_snapshots/test/: test_approve_invoice.1.json  test_approve_invoice_unauthorized.1.json  test_discount_rate_calculation.1.json  test_marketplace_stats.1.json  test_process_payment_early.1.json  test_process_payment_fiat.1.json  test_process_payment_late.1.json  test_reject_invoice.1.json  test_request_funding.1.json  test_submit_invoice_auto_approval.1.json  test_submit_invoice_invalid_amount_too_high.1.json  (+3 more)
zenith-frontend/: next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
zenith-frontend/src/app/: globals.css  page.tsx
zenith-frontend/src/app/createInvoice/: page.tsx
zenith-frontend/src/app/myInvoices/: page.tsx
zenith-frontend/src/app/openInvoices/: page.tsx
zenith-frontend/src/app/payInvoice/: page.tsx
zenith-frontend/src/app/stake/: page.tsx
zenith-frontend/src/app/withdraw/: page.tsx
zenith-frontend/src/components/: Header.tsx
zenith-frontend/src/lib/: contract.ts  soroban.ts  types.ts  wallet.ts
