[package]
name = "invoice-nft"
version = "0.1.0"
edition = "2021"
publish = false
description = "Zenith InvoiceNFT smart contract for tokenizing invoices on Stellar"

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
